--- a/style.css
+++ b/style.css
@@ -1,5 +1,42 @@
 body {
-  width: 100%;
+  background-color: rgb(250, 251, 252);
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+ }
+a{
+  padding: 10px;
+  text-align: center;
+}
+h1{
+  text-align: center;
+}
+#featured-property p {
+  text-align: center;
+  width: 800px;
+  margin: auto;
+ }
+ .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+figcaption {
+  font-size: small;
+  text-align: center;
+ }
+nav a {
+  background-color: gray;
+  padding-left: 10px;
+  padding-right: 10px;
+
+ }
+ #details div{
+  float:left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+ }
